# aicli

./: .gitignore  MIGRATION.md  README.md  README_GO.md  example_prompts.md  go.mod  go.sum  package-lock.json  package.json  patch_analyze.py  patch_video_notes.py  patch_videostudio.py  patch_vue.py  pyproject.toml  test_segmenter.py
.agents/: ai-pipeline-langchain-refactorer.md  aicli-developer.md  clean-code-refactorer-python-vue.md  config-centralizer.md  css-ui-refactorer.md  dead-code-dry-enforcer.md  docs-keeper.md  git-committer.md  session-handoff.md
aicli/: __init__.py  config.py  main.py
aicli/cli/: tui.py
aicli/core/: interfaces.py
aicli/prompts/: news_prompts.py
aicli/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  lm_studio.py  ollama.py  openai_provider.py  vllm.py
aicli/server/: app.py  dependencies.py  orchestrator.py
aicli/services/: __init__.py  image_renamer.py  news_parser.py  video_tagger.py
cmd/aicli/: main.go
docs/: ARCHITECTURE.md  COOKBOOK.md  DATABASE.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  style.css
internal/app/: app.go  app_test.go
internal/config/: config.go  config_test.go  execution.go  execution_test.go
internal/execution/: errors.go  execute.go  images.go  limiter.go  profiles.go  service.go  service_test.go  types.go
internal/progress/: progress.go
internal/provider/: ollama.go  ollama_stream.go  openai.go  (+5 more)
scripts/: run_philosophy_course_and_shutdown.sh
web/: index.html  tsconfig.json  vite.config.ts  web.go
(+640 files in other folders)
