[project]
name = "aicli"
version = "0.6.15"
description = "AI CLI - Power up your terminal with local AI (LM Studio)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "openai>=1.14.2",
    "pydantic-settings>=2.2.1",
    "Pillow>=10.2.0",
    "openpyxl>=3.1.0",
    "sentence-transformers>=3.4.1",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0"
]

[project.scripts]
aicli = "aicli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
