[project]
name = "aicli"
version = "0.6.26"
description = "AI CLI - Power up your terminal with local AI (LM Studio)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "openai>=1.14.2",
    "pydantic-settings>=2.2.1",
    "Pillow>=10.2.0",
    "openpyxl>=3.1.0",
    "sentence-transformers>=3.4.1",
    "faster-whisper>=1.0.0",
    "numpy>=1.26.0",
    "pdf2image>=1.16.0",
    "pyyaml>=6.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.26",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langchain-anthropic>=1.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
]

[project.scripts]
aicli = "aicli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
